fix(textarea): fixing display on Safari browser by adding width and box-sizing

--- a/packages/components/textarea/src/components/osds-textarea/osds-textarea.scss
+++ b/packages/components/textarea/src/components/osds-textarea/osds-textarea.scss
@@ -16,6 +16,11 @@
   }
 
   outline: none;
+
+  textarea {
+    box-sizing: border-box;
+    width: 100%;
+  }
 }
 
 :host([inline]) {
